Updates to yaml/yml

--- a/open_api_spec/test.yml
+++ b/open_api_spec/test.yml
@@ -1,47 +1,46 @@
-openapi: 3.0.0
+openapi: "3.0.0"
 info:
-  title: Prompt Rewriter API
-  description: >
-    This API accepts an input prompt and returns a reworded version for improved clarity and effectiveness.
+  title: "Prompt Rewriter API"
+  description: "This API accepts an input prompt and returns a reworded version for improved clarity and effectiveness."
   version: "1.0.0"
 servers:
-  - url: http://localhost:5000
+  - url: "http://cybernxxt.com:8080"
 paths:
   /demo:
     post:
-      summary: Reword an input prompt
-      operationId: rewordPrompt
+      summary: "Reword an input prompt"
+      operationId: "rewordPrompt"
       requestBody:
-        description: The original prompt that needs to be reworded.
+        description: "The original prompt that needs to be reworded."
         required: true
         content:
           application/json:
             schema:
-              type: object
+              type: "object"
               properties:
                 input_prompt:
-                  type: string
-                  description: The input prompt to be rewritten.
+                  type: "string"
+                  description: "The input prompt to be rewritten."
               required:
-                - input_prompt
+                - "input_prompt"
       responses:
-        '200':
-          description: Successfully reworded the prompt.
+        "200":
+          description: "Successfully reworded the prompt."
           content:
             application/json:
               schema:
-                type: object
+                type: "object"
                 properties:
                   Reworded_prompt:
-                    type: string
-                    description: The reworded version of the input prompt.
-        '500':
-          description: An error occurred while rewording the prompt.
+                    type: "string"
+                    description: "The reworded version of the input prompt."
+        "500":
+          description: "An error occurred while rewording the prompt."
           content:
             application/json:
               schema:
-                type: object
+                type: "object"
                 properties:
                   detail:
-                    type: string
-                    description: Error message.
+                    type: "string"
+                    description: "Error message."
