--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,6 +26,9 @@ jobs:
           ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             set -e  # Exit immediately if a command exits with a non-zero status
 
+            # Pull the latest code from main branch
+            git pull origin main
+
             # Change to your cloned repo directory on the EC2 instance
             # Adjust this path if your repo is in a different location
             cd /home/ec2-user/copilot_solutions
