--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,7 +36,7 @@ jobs:
             echo "${{ secrets.DOT_ENV }}" > .env
 
             # Create a new virtual environment named venv
-            python3 -m venv venv
+            python -m venv venv
 
             # Activate the virtual environment
             source venv/bin/activate
