--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,9 +42,11 @@ jobs:
             source venv/bin/activate
 
             # Install required packages from Requirement.txt
-            pip install --upgrade pip
-            pip install -r Requirement.txt
+
+            mkdir -p ~/tmp
+            TMPDIR=~/tmp pip install --upgrade pip
+            TMPDIR=~/tmp pip install -r Requirement.txt
 
             # Run main_with_rag.py
-            sudo /home/ec2-user/file_name/env_name/bin/python3 main_with_rag.py
+            sudo /home/ec2-user/copilot_solutions/venv/bin/python3 main.py
           EOF
